# Penumbra

./: .gitignore  CMakeLists.txt  README.md  TODO.md  emscriptenCompile.bat  emscriptenCompile.sh  meson.build  meson.options  shader.cpp  shader.hpp  testEntry.cpp
include/: penumbra.hpp
include/antumbra/types/: sprite.hpp
include/debug/: consoleColors.hpp  log.hpp
include/utils/: transform2D.hpp  vectors.hpp
pnmbr/shaders-2D/: circle.vs  default.fs  default.vs  default.wgsl  rgb-alpha.fs  rgb-alpha.wgsl
shaders/antumbra/: circle.fs  compileCpy.sh  default.fs  default.wgsl  default2.fs  f-default.sc  f-rgb-alpha.sc  f-uv-alpha.sc  rgb-alpha.wgsl  sh-compile-all.sh  test.wgsl  uv-alpha.wgsl  v-default.sc  varying.def.sc
src/: penumbra.cpp
src/antumbra/: antumbra.cpp  antumbra.hpp
src/antumbra/types/: posUvVertex.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp
src/backend/: backendIdxBuffer.hpp  backendRender.hpp  backendVtxBuffer.hpp  backendVtxLayout.hpp  backendWindow.hpp  shader.hpp  texture.hpp
src/backend/bgfx/: backendIdxBuffer.cpp  backendRender.cpp  backendVtxBuffer.cpp  backendVtxLayout.cpp  backendWindow.cpp  shader.cpp  texture.cpp
src/backend/wgpu/: backendIdxBuffer.cpp  backendRender.cpp  backendVtxBuffer.cpp  backendVtxLayout.cpp  backendWindow.cpp  shader.cpp  texture.cpp
src/backend/wgpu/wgpuutils/: init.cpp  init.hpp  objectManager.cpp  objectManager.hpp
src/backend/wgpu/wgpuutils/objManager/: pipeline.cpp  pipeline.hpp
src/core/: window.cpp  window.hpp  windowCoordinator.cpp  windowCoordinator.hpp  windowStruct.hpp
src/debug/: consoleColors.cpp  log.cpp  message.hpp  messageNum.hpp  messageStr.hpp
src/utils/: config.cpp  config.hpp  transform2D.cpp  vectors.cpp
subprojects/: dawn.wrap  glfw.wrap  wgpu-native.wrap
subprojects/packagefiles/wgpu-native/: meson.build
utilities/: sh-compile-all.sh  sh-compile.sh  toSRGB.sh
